--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <div class="form-search">
               <input class="search" type="text" id="navigation-search" name="navigation-search"
                 placeholder="Поиск по сайту">
-              <label for="navigation-search"><button class="button" type="submit">Найти</button></label>
+              <label class="navigation-search" for="navigation-search"><button class="button"
+                  type="submit">Найти</button></label>
             </div>
           </form>
         </section>
@@ -46,18 +47,18 @@
           <div class="dropdown">
             <button class="navigation-link" href="catalog.html">Коталог товаров</button>
             <div class="subcatalog">
-              <span class="block-1">
+              <div class="block-1">
                 <a class="subcatalog" href="#">Виртуальная реальность</a>
                 <a class="subcatalog" href="#">Моноподы для cелфи</a>
                 <a class="subcatalog" href="#">Экшн-камеры</a>
-              </span>
-              <span class="block-2">
+              </div>
+              <div class="block-2">
                 <a class="subcatalog" href="#">Фитнес-браслеты</a>
                 <a class="subcatalog" href="#">Умные часы</a>
-              </span>
-              <span class="block-3">
+              </div>
+              <div class="block-3">
                 <a class="subcatalog" href="#">Квадрокоптеры</a>
-              </span>
+              </div>
             </div>
           </div>
         </section>
@@ -347,8 +348,7 @@
 
 
     <footer class="page-footer">
-      <img class="logo" src="images/logo (yellow).svg" width="145" height="36"
-            alt="Логотип интернет-магазина Девайс.">
+      <img class="logo" src="images/logo (yellow).svg" width="145" height="36" alt="Логотип интернет-магазина Девайс.">
       <div class="page-footer-container">
         <section class="footer-adress">
           <h2 class="visually-hidden">Адрес.</h2>
@@ -402,8 +402,8 @@
           <div class="footer-developer-logo">
             <h2 class="visually-hidden">Логотип разработчика.</h2>
             <a href=" https://htmlacademy.ru">
-              <img class="developer-logo" src="images/logo (.html-academy).svg" alt="Логотип разработчика."
-                width="115" height="33"></a>
+              <img class="developer-logo" src="images/logo (.html-academy).svg" alt="Логотип разработчика." width="115"
+                height="33"></a>
           </div>
         </section>
       </div>
