--- a/catalog.html
+++ b/catalog.html
@@ -327,16 +327,13 @@
 
     <footer class="page-footer">
       <div class="wrapper">
-        <img class="logo" src="images/logo (yellow).svg" width="145" height="36"
-          alt="Логотип интернет-магазина Девайс.">
+        <img class="logo" src="images/yellow logo.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс.">
         <div class="page-footer-container">
           <section class="footer-adress">
             <h2 class="visually-hidden">Адрес.</h2>
             <address class="contacts-address">
               <p class="address">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
             </address>
-            <div class="broken-line">
-            </div>
           </section>
 
           <section class="footer-about-us">
@@ -359,15 +356,59 @@
               <ul class="social-network-list">
                 <li class="social-network-item">
                   <span class="visually-hidden">Telegram.</span>
-                  <a class="button" href="ttps://t.me/htmlacademy"></a>
+                  <a class="button" href="ttps://t.me/htmlacademy">
+                    <svg class="social-icon" width="14" height="12" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#a)">
+                        <path fill="currentColor"
+                          d="M12.443.074.623 4.632c-.807.324-.802.774-.148.974l3.035.947 7.021-4.43c.332-.202.635-.093.386.128L5.228 7.385l-.209 3.129c.307 0 .442-.141.614-.307l1.474-1.433 3.066 2.264c.565.312.971.152 1.112-.523l2.013-9.485c.206-.826-.316-1.2-.855-.956Z"
+                          fill="#000" />
+                      </g>
+                      <defs>
+                        <clipPath id="a">
+                          <path d="M0 0h14v12H0z" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-network-item">
                   <span class="visually-hidden">Youtube.</span>
-                  <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
+                  <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                    <svg class="social-icon" width="16" height="11" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#a)">
+                        <path fill="currentColor"
+                          d="M15.667 1.675a1.857 1.857 0 0 0-.51-.847 2.034 2.034 0 0 0-.893-.495c-1.252-.33-6.268-.33-6.268-.33a51.083 51.083 0 0 0-6.26.314 2.107 2.107 0 0 0-.892.506c-.246.238-.425.53-.518.851A19.393 19.393 0 0 0 0 5.337C-.008 6.564.101 7.79.326 8.999c.091.32.27.611.516.846.248.236.556.406.894.496 1.27.329 6.26.329 6.26.329 2.094.024 4.188-.08 6.268-.313.335-.087.642-.257.892-.495.244-.23.42-.524.51-.847.23-1.207.342-2.434.334-3.663a17.72 17.72 0 0 0-.333-3.678ZM6.402 7.619V3.055l4.173 2.282L6.402 7.62Z"
+                          fill="#000" />
+                      </g>
+                      <defs>
+                        <clipPath id="a">
+                          <path d="M0 0h16v11H0z" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </a>
                 </li>
                 <li class="social-network-item">
                   <span class="visually-hidden">Twitter.</span>
-                  <a class="button" href=" https://twitter.com/htmlacademy_ru"></a>
+                  <a class="button" href=" https://twitter.com/htmlacademy_ru">
+                    <svg class="social-icon" width="15" height="14" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#a)">
+                        <g clip-path="url(#b)">
+                          <path fill="currentColor"
+                            d="M10.347.155c1.6-.498 2.773.298 3.413 1.095.533-.2 1.173-.398 1.813-.598 0 .797-.533 1.395-.853 1.594.747.2 1.28-.398 1.28-.398-.107.896-.96 1.693-1.493 1.892-.214 6.274-2.987 10.358-9.494 10.258h-.426c-.32 0-3.947-.398-4.587-1.792 2.133.199 3.627-.399 4.373-1.096-.853-.299-2.56-.398-2.773-2.789.32.2.533.3 1.173.2C1.6 7.723.32 7.026.427 5.034c.32.298.96.498 1.28.398-.64-.2-1.92-3.087-.854-4.581 1.707 1.693 3.52 3.386 6.72 3.486C7.787 2.246 8.64.852 10.347.155Z"
+                            fill="#000" />
+                        </g>
+                      </g>
+                      <defs>
+                        <clipPath id="a">
+                          <path transform="rotate(-180 8 7)" d="M0 0h16v14H0z" />
+                        </clipPath>
+                        <clipPath id="b">
+                          <path d="M0 0h16v14H0z" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -382,8 +423,10 @@
             <div class="footer-developer-logo">
               <h2 class="visually-hidden">Логотип разработчика.</h2>
               <a href=" https://htmlacademy.ru">
-                <img class="developer-logo" src="images/logo (.html-academy).svg" alt="Логотип разработчика."
-                  width="115" height="33"></a>
+                <svg class="developer-logo-icon" width="115" height="33" xmlns="http://www.w3.org/2000/svg">
+                  <path fill="currentColor"
+                    d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1-3.4 0-5.6 2.5-5.6 5.6 0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1c-.4 1.3-1.7 2.3-3.3 2.3-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 17.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
+                </svg></a>
             </div>
           </section>
         </div>
